tests/baselines/reference/parserTypeQuery9.errors.txt
parserTypeQuery9.ts(1,15): error TS2304: Cannot find name 'A'.


==== parserTypeQuery9.ts (1 errors) ====
    var s: typeof A[];
                  ~
!!! error TS2304: Cannot find name 'A'.
    